apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'

android {

    compileSdk 35 // Set the compile SDK version

    defaultConfig {
        applicationId "piotr_gorczynski.soccer2"
        minSdk 23
        targetSdk 35
        versionCode 5
        versionName '5.0'
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
    }
    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/*.version']
        }
    }

    //GPT fixes...

    testOptions {
        unitTests.returnDefaultValues = true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += ["-Xlint:deprecation"]
    }

    namespace 'piotr_gorczynski.soccer2'
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    //GPT fixes

    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'

    //GPT fixes
     implementation platform('com.google.firebase:firebase-bom:33.13.0')
    implementation 'com.google.firebase:firebase-auth'
    implementation 'com.google.firebase:firebase-auth'
    //GPT fixes
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.core:core:1.16.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'com.google.firebase:firebase-firestore:25.1.4' // or latest version
    //GPT fixes
    implementation "androidx.preference:preference:1.2.1"
    //GPT fixes
    // Instrumented test dependencies
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
    //Added dependencies for invoking acceptInvite
    implementation 'com.google.firebase:firebase-functions:21.2.1'
    // FCM
    implementation 'com.google.firebase:firebase-messaging:24.1.1' // Latest as of May 2025
}

import java.nio.file.Files
import java.nio.file.StandardCopyOption
// Register custom copy task
tasks.register("copyGoogleServicesJson") {
    doLast {
        def source = file("../../secrets/google-services.json")
        def destination = file("google-services.json")
        if (source.exists()) {
            Files.copy(source.toPath(), destination.toPath(), StandardCopyOption.REPLACE_EXISTING)
            println("✅ google-services.json copied to app/")
        } else {
            throw new GradleException("❌ google-services.json not found in secrets/")
        }
    }
}

// Hook into the Firebase task *after* all plugins are applied
afterEvaluate {
    tasks.matching { it.name == "processDebugGoogleServices" }.configureEach {
        dependsOn("copyGoogleServicesJson")
    }
}
